src/sidebar/sidebar.scss
@import '../variables.scss';

.sidebar {
  margin-bottom: 2em;
  padding: 0 1em;

  &__picture {
    display: block;
    width: 100%;
    height: auto;
    max-width: 9em;
    max-height: 9em;
    border-radius: 100%;
    margin: 0 auto 1em;
  }

  &__picture-wrapper {
    @include screen-print {
      width: 20%;
      display: inline-block;
      vertical-align: top;
      margin-top: 2em;
    }

    @include screen-not-print {
      width: 100%;
    }
  }

  &__header {
    text-align: center;

    @include screen-print {
      text-align: left;
      padding: 0;
    }
  }

  &__content {
    @include screen-print {
      padding: 0 1em;
      width: 80%;
      display: inline-block;
    }

    @include screen-not-print {
      width: 100%;
    }
  }

  &__introduction {
    margin-bottom: 1em;

    @include screen-print {
      text-align: left;
      padding: 0;
    }
  }

  &__links {
    text-align: center;

    @include screen-md {
      top: 1em;
      position: sticky;
    }
  }

  &__link {
    padding: 0 0.1em;
    margin: 0 0.2em;

    @include screen-print {
      text-align: left;
      line-height: 1.5em;
      padding: 0;
      margin: 0 1em 0 0;
    }

    &--print-hidden {
      @include screen-print {
        display: none;
      }
    }
  }
}

